@startuml

title __MODEL's Class Diagram__\n


    namespace com.example.srp.demosrpgamemanager {
      namespace model {
        class com.example.srp.demosrpgamemanager.model.ActionPlayer {
            - action : String
            + ActionPlayer()
            + getAction()
            + hashCode()
            + setAction()
        }
      }
    }

  


    namespace com.example.srp.demosrpgamemanager {
      namespace model {
        class com.example.srp.demosrpgamemanager.model.Player {
            - highScore : long
            - id : String
            - name : String
            + Player()
            + getActionPlayer()
            + getHighScore()
            + getId()
            + getName()
            + getSessionPlayer()
            + setActionPlayer()
            + setHighScore()
            + setId()
            + setName()
            + setSessionPlayer()
        }
      }
    }




    namespace com.example.srp.demosrpgamemanager {
      namespace model {
        class com.example.srp.demosrpgamemanager.model.SessionPlayer {
            - sessionId : String
            + SessionPlayer()
            + getSessionId()
            + setSessionId()
        }
      }
    }

  

  com.example.srp.demosrpgamemanager.model.Player o-- com.example.srp.demosrpgamemanager.model.ActionPlayer : actionPlayer
  com.example.srp.demosrpgamemanager.model.Player o-- com.example.srp.demosrpgamemanager.model.SessionPlayer : sessionPlayer



right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
